grammar/yy.output

0: shift/reduce conflict (shift 34(0), red'n 4(0)) on TKLParen
0: shift/reduce conflict (shift 14(0), red'n 4(0)) on TKLBrace
0: shift/reduce conflict (shift 36(0), red'n 4(0)) on TKLBracket
0: shift/reduce conflict (shift 18(0), red'n 4(0)) on TKIf
0: shift/reduce conflict (shift 20(0), red'n 4(0)) on TKWhile
0: shift/reduce conflict (shift 19(0), red'n 4(0)) on TKReturn
0: shift/reduce conflict (shift 15(0), red'n 4(0)) on TKBreak
0: shift/reduce conflict (shift 16(0), red'n 4(0)) on TKContinue
0: shift/reduce conflict (shift 41(0), red'n 4(0)) on TKTrue
0: shift/reduce conflict (shift 40(0), red'n 4(0)) on TKFalse
0: shift/reduce conflict (shift 39(0), red'n 4(0)) on TKNil
0: shift/reduce conflict (shift 42(0), red'n 4(0)) on TKBang
0: shift/reduce conflict (shift 43(0), red'n 4(0)) on TKPlus
0: shift/reduce conflict (shift 44(0), red'n 4(0)) on TKMinus
0: shift/reduce conflict (shift 21(0), red'n 4(0)) on TKIdent
0: shift/reduce conflict (shift 35(0), red'n 4(0)) on TKInt
0: shift/reduce conflict (shift 37(0), red'n 4(0)) on TKFloat
0: shift/reduce conflict (shift 38(0), red'n 4(0)) on TKString
state 0
	$accept: .program $end 
	stmts: .    (4)

	TKLParen  shift 34
	TKLBrace  shift 14
	TKLBracket  shift 36
	TKIf  shift 18
	TKWhile  shift 20
	TKReturn  shift 19
	TKBreak  shift 15
	TKContinue  shift 16
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  reduce 4 (src line 157)

	stmt  goto 3
	stmt_assign  goto 4
	stmt_block  goto 5
	stmt_break  goto 6
	stmt_continue  goto 7
	stmt_expr  goto 8
	stmt_if  goto 9
	stmt_return  goto 10
	stmt_while  goto 11
	stmts  goto 2
	expr  goto 17
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 13
	expr_index  goto 12
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31
	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  stmts.    (1)
	stmts:  stmts.stmt 

	TKLParen  shift 34
	TKLBrace  shift 14
	TKLBracket  shift 36
	TKIf  shift 18
	TKWhile  shift 20
	TKReturn  shift 19
	TKBreak  shift 15
	TKContinue  shift 16
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  reduce 1 (src line 141)

	stmt  goto 45
	stmt_assign  goto 4
	stmt_block  goto 5
	stmt_break  goto 6
	stmt_continue  goto 7
	stmt_expr  goto 8
	stmt_if  goto 9
	stmt_return  goto 10
	stmt_while  goto 11
	expr  goto 17
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 13
	expr_index  goto 12
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 3
	stmts:  stmt.    (3)

	.  reduce 3 (src line 153)


state 4
	stmt:  stmt_assign.    (5)

	.  reduce 5 (src line 163)


state 5
	stmt:  stmt_block.    (6)

	.  reduce 6 (src line 165)


state 6
	stmt:  stmt_break.    (7)

	.  reduce 7 (src line 166)


state 7
	stmt:  stmt_continue.    (8)

	.  reduce 8 (src line 167)


state 8
	stmt:  stmt_expr.    (9)

	.  reduce 9 (src line 168)


state 9
	stmt:  stmt_if.    (10)

	.  reduce 10 (src line 169)


state 10
	stmt:  stmt_return.    (11)

	.  reduce 11 (src line 170)


state 11
	stmt:  stmt_while.    (12)

	.  reduce 12 (src line 171)


12: shift/reduce conflict (shift 46(0), red'n 37(0)) on TKEqual
state 12
	stmt_assign:  expr_index.TKEqual expr 
	expr:  expr_index.    (37)

	TKEqual  shift 46
	.  reduce 37 (src line 284)


13: shift/reduce conflict (shift 47(0), red'n 26(0)) on TKEqual
state 13
	stmt_assign:  expr_ident.TKEqual expr 
	expr:  expr_ident.    (26)

	TKEqual  shift 47
	.  reduce 26 (src line 273)


14: shift/reduce conflict (shift 34(0), red'n 4(0)) on TKLParen
14: shift/reduce conflict (shift 14(0), red'n 4(0)) on TKLBrace
14: shift/reduce conflict (shift 36(0), red'n 4(0)) on TKLBracket
14: shift/reduce conflict (shift 18(0), red'n 4(0)) on TKIf
14: shift/reduce conflict (shift 20(0), red'n 4(0)) on TKWhile
14: shift/reduce conflict (shift 19(0), red'n 4(0)) on TKReturn
14: shift/reduce conflict (shift 15(0), red'n 4(0)) on TKBreak
14: shift/reduce conflict (shift 16(0), red'n 4(0)) on TKContinue
14: shift/reduce conflict (shift 41(0), red'n 4(0)) on TKTrue
14: shift/reduce conflict (shift 40(0), red'n 4(0)) on TKFalse
14: shift/reduce conflict (shift 39(0), red'n 4(0)) on TKNil
14: shift/reduce conflict (shift 42(0), red'n 4(0)) on TKBang
14: shift/reduce conflict (shift 43(0), red'n 4(0)) on TKPlus
14: shift/reduce conflict (shift 44(0), red'n 4(0)) on TKMinus
14: shift/reduce conflict (shift 21(0), red'n 4(0)) on TKIdent
14: shift/reduce conflict (shift 35(0), red'n 4(0)) on TKInt
14: shift/reduce conflict (shift 37(0), red'n 4(0)) on TKFloat
14: shift/reduce conflict (shift 38(0), red'n 4(0)) on TKString
state 14
	stmt_block:  TKLBrace.stmts TKRBrace 
	stmts: .    (4)

	TKLParen  shift 34
	TKLBrace  shift 14
	TKLBracket  shift 36
	TKIf  shift 18
	TKWhile  shift 20
	TKReturn  shift 19
	TKBreak  shift 15
	TKContinue  shift 16
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  reduce 4 (src line 157)

	stmt  goto 3
	stmt_assign  goto 4
	stmt_block  goto 5
	stmt_break  goto 6
	stmt_continue  goto 7
	stmt_expr  goto 8
	stmt_if  goto 9
	stmt_return  goto 10
	stmt_while  goto 11
	stmts  goto 48
	expr  goto 17
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 13
	expr_index  goto 12
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 15
	stmt_break:  TKBreak.    (16)

	.  reduce 16 (src line 200)


state 16
	stmt_continue:  TKContinue.    (17)

	.  reduce 17 (src line 209)


17: shift/reduce conflict (shift 65(0), red'n 18(0)) on TKLBracket
17: shift/reduce conflict (shift 53(0), red'n 18(0)) on TKBang
17: shift/reduce conflict (shift 57(0), red'n 18(0)) on TKPlus
17: shift/reduce conflict (shift 58(0), red'n 18(0)) on TKMinus
state 17
	stmt_expr:  expr.    (18)
	expr_binary:  expr.TKAnd expr 
	expr_binary:  expr.TKOr expr 
	expr_binary:  expr.TKIs expr 
	expr_binary:  expr.TKEqual TKEqual expr 
	expr_binary:  expr.TKBang TKEqual expr 
	expr_binary:  expr.TKLAngle expr 
	expr_binary:  expr.TKLAngle TKEqual expr 
	expr_binary:  expr.TKRAngle expr 
	expr_binary:  expr.TKRAngle TKEqual expr 
	expr_binary:  expr.TKIn expr 
	expr_binary:  expr.TKPlus expr 
	expr_binary:  expr.TKMinus expr 
	expr_binary:  expr.TKStar expr 
	expr_binary:  expr.TKSlash expr 
	expr_binary:  expr.TKPercent expr 
	expr_binary:  expr.TKAmpersand expr 
	expr_binary:  expr.TKPipe expr 
	expr_binary:  expr.TKCaret expr 
	expr_binary:  expr.TKLAngle TKLAngle expr 
	expr_binary:  expr.TKRAngle TKRAngle expr 
	expr_index:  expr.TKLBracket expr TKRBracket 
	expr_ternary:  expr.TKQuestion expr TKColon expr 

	TKLBracket  shift 65
	TKAnd  shift 49
	TKOr  shift 50
	TKIs  shift 51
	TKIn  shift 56
	TKBang  shift 53
	TKQuestion  shift 66
	TKEqual  shift 52
	TKLAngle  shift 54
	TKRAngle  shift 55
	TKPlus  shift 57
	TKMinus  shift 58
	TKStar  shift 59
	TKSlash  shift 60
	TKPercent  shift 61
	TKAmpersand  shift 62
	TKPipe  shift 63
	TKCaret  shift 64
	.  reduce 18 (src line 218)


state 18
	stmt_if:  TKIf.expr stmt TKElse stmt 
	stmt_if:  TKIf.expr stmt 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 67
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

19: shift/reduce conflict (shift 34(0), red'n 21(0)) on TKLParen
19: shift/reduce conflict (shift 36(0), red'n 21(0)) on TKLBracket
19: shift/reduce conflict (shift 41(0), red'n 21(0)) on TKTrue
19: shift/reduce conflict (shift 40(0), red'n 21(0)) on TKFalse
19: shift/reduce conflict (shift 39(0), red'n 21(0)) on TKNil
19: shift/reduce conflict (shift 42(0), red'n 21(0)) on TKBang
19: shift/reduce conflict (shift 43(0), red'n 21(0)) on TKPlus
19: shift/reduce conflict (shift 44(0), red'n 21(0)) on TKMinus
19: shift/reduce conflict (shift 21(0), red'n 21(0)) on TKIdent
19: shift/reduce conflict (shift 35(0), red'n 21(0)) on TKInt
19: shift/reduce conflict (shift 37(0), red'n 21(0)) on TKFloat
19: shift/reduce conflict (shift 38(0), red'n 21(0)) on TKString
state 19
	stmt_return:  TKReturn.    (21)
	stmt_return:  TKReturn.expr 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  reduce 21 (src line 245)

	expr  goto 70
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 20
	stmt_while:  TKWhile.expr stmt 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 71
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 21
	expr_ident:  TKIdent.    (63)

	.  reduce 63 (src line 492)


state 22
	expr:  expr_group.    (24)

	.  reduce 24 (src line 270)


state 23
	expr:  expr_ternary.    (25)

	.  reduce 25 (src line 272)


state 24
	expr:  expr_int.    (27)

	.  reduce 27 (src line 274)


state 25
	expr:  expr_list.    (28)

	.  reduce 28 (src line 275)


state 26
	expr:  expr_float.    (29)

	.  reduce 29 (src line 276)


state 27
	expr:  expr_string.    (30)

	.  reduce 30 (src line 277)


state 28
	expr:  expr_nil.    (31)

	.  reduce 31 (src line 278)


state 29
	expr:  expr_false.    (32)

	.  reduce 32 (src line 279)


state 30
	expr:  expr_true.    (33)

	.  reduce 33 (src line 280)


state 31
	expr:  expr_unary.    (34)

	.  reduce 34 (src line 281)


state 32
	expr:  expr_binary.    (35)

	.  reduce 35 (src line 282)


state 33
	expr:  expr_tuple.    (36)

	.  reduce 36 (src line 283)


state 34
	expr_group:  TKLParen.expr TKRParen 
	expr_tuple:  TKLParen.TKRParen 
	expr_tuple:  TKLParen.exprs_comma_delimited TKRParen 
	expr_tuple:  TKLParen.exprs_comma_delimited TKComma TKRParen 

	TKLParen  shift 34
	TKRParen  shift 73
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 72
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31
	exprs_comma_delimited  goto 74

state 35
	expr_int:  TKInt.    (65)

	.  reduce 65 (src line 510)


state 36
	expr_list:  TKLBracket.TKRBracket 
	expr_list:  TKLBracket.exprs_comma_delimited TKRBracket 
	expr_list:  TKLBracket.exprs_comma_delimited TKComma TKRBracket 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKRBracket  shift 75
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 77
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31
	exprs_comma_delimited  goto 76

state 37
	expr_float:  TKFloat.    (61)

	.  reduce 61 (src line 468)


state 38
	expr_string:  TKString.    (70)

	.  reduce 70 (src line 576)


state 39
	expr_nil:  TKNil.    (69)

	.  reduce 69 (src line 569)


state 40
	expr_false:  TKFalse.    (60)

	.  reduce 60 (src line 461)


state 41
	expr_true:  TKTrue.    (72)

	.  reduce 72 (src line 602)


state 42
	expr_unary:  TKBang.expr 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 78
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 43
	expr_unary:  TKPlus.expr 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 79
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 44
	expr_unary:  TKMinus.expr 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 80
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 45
	stmts:  stmts stmt.    (2)

	.  reduce 2 (src line 148)


state 46
	stmt_assign:  expr_index TKEqual.expr 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 81
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 47
	stmt_assign:  expr_ident TKEqual.expr 

	TKLParen  shift 34
	TKLBracket  shift 36
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error

	expr  goto 82
	expr_binary  goto 32
	expr_false  goto 29
	expr_float  goto 26
	expr_group  goto 22
	expr_ident  goto 68
	expr_index  goto 69
	expr_int  goto 24
	expr_list  goto 25
	expr_nil  goto 28
	expr_string  goto 27
	expr_ternary  goto 23
	expr_true  goto 30
	expr_tuple  goto 33
	expr_unary  goto 31

state 48
	stmts:  stmts.stmt 
	stmt_block:  TKLBrace stmts.TKRBrace 

	TKLParen  shift 34
	TKLBrace  shift 14
	TKRBrace  shift 83
	TKLBracket  shift 36
	TKIf  shift 18
	TKWhile  shift 20
	TKReturn  shift 19
	TKBreak  shift 15
	TKContinue  shift 16
	TKTrue  shift 41
	TKFalse  shift 40
	TKNil  shift 39
	TKBang  shift 42
	TKPlus  shift 43
	TKMinus  shift 44
	TKIdent  shift 21
	TKInt  shift 35
	TKFloat  shift 37
	TKString  shift 38
	.  error
